@@ -22,8 +22,7 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_realHeaderProxy.php');
-require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_headerCollector.php');
+require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
 
 /**
  * Class 'tx_oelib_headerProxyFactory' for the 'oelib' extension.
